Fix overflow of inputs for small ultra screen

--- a/todo-list-with-localStorage/style.css
+++ b/todo-list-with-localStorage/style.css
@@ -77,6 +77,7 @@ div.input-container-filter input[type="text"] {
 	padding: 1px 5px;
 	border: 2px solid var(--black);
 	border-radius: 5px;
+	width: 65%;
 }
 div.input-container input[type="text"]:focus,
 div.input-container-filter input[type="text"]:focus {
